--- a/source/patterns/components/image/image.scss
+++ b/source/patterns/components/image/image.scss
@@ -17,6 +17,7 @@
       display: block;
       background-image: var(--cu-bg-image);
       background-size: cover;
+      background-position: center;
       width: 100%;
       height: 100%;
       -webkit-clip-path: polygon(0 60%, 100% 60%, 100% 100%, 0% 100%);
